# atina-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apt-install-packages.sh  apt-packages.txt  build_config.h.in
cmake/: build_config.cmake
config/: CMakeLists.txt
core/: CMakeLists.txt
core/include/core/: basic_module.h  config.h  enum.h  module_container.h  module_container.tpp  modules.h  task_scheduler.h  thread_pool.h
core/include/core/database/: base.h
core/include/core/database/tables/: base_header.h  users.h
core/include/core/exception/: basic_exception.h  config_exception.h  database_exception.h  module_exception.h  thread_pool_exception.h
core/include/core/utils/: folder.h  log.h  server_instance.h  string.h  time.h  uuid.h
core/include/core/utils/encrypt/: rsa.h
core/include/core/utils/hash/: argon2.h  sha256.h
core/src/: config.cpp  enum.cpp  module_container.cpp  modules.cpp  task_scheduler.cpp  thread_pool.cpp  validation_code.cpp
core/src/builtin/: validation_code.h
core/src/builtin/database/: base.h  token.h
core/src/builtin/database/tables/: base_header.h  token_header.h  tokens.h  users.h
core/src/builtin/email/: email_builder.h  email_sender.h
core/src/database/: base.cpp  token.cpp
core/src/database/tables/: base_header.cpp  token_header.cpp  tokens.cpp  users.cpp
core/src/email/: email_builder.cpp  email_sender.cpp
core/src/utils/: folder.cpp  log.cpp  server_instance.cpp  string.cpp  time.cpp  uuid.cpp
core/src/utils/encrypt/: rsa.cpp
core/src/utils/hash/: argon2.cpp  sha256.cpp
emails/: CMakeLists.txt  verification_code_en.html  verification_code_zhCN.html  welcome_cn.html  welcome_zhCN.html
gmail/: .gitignore  CMakeLists.txt  README.md  SETUP_GMAIL_API.md  gmail.cfg.in  gmail.py  send_email.sh
resources/: CMakeLists.txt  gen_resources_header_src.py  resource_en.json  resource_zhCN.json  resources.cpp.in  resources.h.in
server/: CMakeLists.txt
server/include/server/: modules.h  server.h
server/include/server/utils/: localport.h
server/src/: modules.cpp  server.cpp
server/src/utils/: localport.cpp
